# backend-fastapi-structure-main

./: .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5f12415f4215_initial.py
app/: app.py  health.py  main.py  routes.py
app/auth/: routes.py
app/auth/api/: auth.py
app/auth/exceptions/: auth.py
app/auth/models/: auth_model.py
app/auth/repositories/: auth.py
app/auth/schemas/: auth.py
app/auth/services/: auth.py
app/config/: settings.py
app/database/: __init__.py  base.py  enum.py  import_sqlalchemy_models.py  session_factory.py  session_handler.py
app/utils/: di.py  exceptions.py  formatters.py  logging.py  pagination.py  platform.py  resilience.py  search.py  tsid.py  validators.py
